--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.479.0",
     "next": "15.2.1",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "react": "18.3.1",
     "react-day-picker": "^8.10.1",
@@ -44,6 +45,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/next-auth": "^3.13.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
