--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "date-fns": "^3.6.0",
+    "firebase": "^11.8.1",
+    "firestore": "^1.1.6",
     "lucide-react": "^0.479.0",
     "next": "15.2.1",
     "next-auth": "^4.24.11",
